# bmc_companion_bot

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.local.yml  docker-compose.stage.yaml  docker-compose.yml  pyproject.toml  schelduer.py  setup.cfg  ya_calendar_testing.py
.github/workflows/: deploy_stage.yaml  lint.yml  stage_delpoy.yaml  stage_deploy.yaml
adminpanel/src/celery_app/: celery.py  create_task.py
adminpanel/src/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
adminpanel/src/config/settings/: __init__.py
adminpanel/src/content/: admin.py  models.py  tests.json
adminpanel/src/content/api/: urls.py
adminpanel/src/content/migrations/: 0001_initial.py  0002_fill_tests.py  0002_remove_answer_is_correct_remove_question_score_and_more.py  0003_testprogress_test.py  0004_alter_testprogress_answer.py  0005_remove_testprogress_answer_and_more.py
adminpanel/src/profiles/: admin.py  models.py
adminpanel/src/profiles/api/: urls.py
adminpanel/src/profiles/migrations/: 0001_initial.py  0002_allusersnotification.py  0003_profile_address_alter_profile_middle_name.py
adminpanel/src/questioning/: admin.py  apps.py  exceptions.py  models.py  services.py
adminpanel/src/questioning/api/: urls.py
adminpanel/src/questioning/migrations/: 0001_initial.py  0002_alter_testprogress_options.py
adminpanel/src/schedule/: admin.py  models.py  tasks.py
adminpanel/src/schedule/api/: urls.py
adminpanel/src/schedule/migrations/: 0001_initial.py  0002_meeting_comment.py  0002_remove_meetingfeedback_score_and_more.py  0003_meeting_timeslot.py  0003_meetingfeedback.py  0004_changed_model_relation.py
bot/src/: base.py  context_manager.py  decorators.py  run.py  utils.py
bot/src/app/: __init__.py
bot/src/core/: constants.py  settings.py
bot/src/handlers/: __init__.py  admin.py  base.py  constants.py  handlers_utils.py  root_handlers.py  start.py  start_menu.py
bot/src/handlers/admin/: admins_list.py  answers.py  entrypoint.py  questions.py  root_handlers.py  tests.py  user_create.py  user_delete.py  user_entrypoint.py  user_get_list.py  users_list.py
bot/src/handlers/meeting/: admins_list.py  buttons.py  entrypoint.py  enums.py  feedback.py  helpers.py  meeting_cancel.py  meeting_first.py  meeting_repeat.py  meeting_reschedule.py  messages.py  root_handlers.py  tests.py  users_list.py
bot/src/internal/: calendar.py  exceptions.py
bot/src/mock/: codebase.py  mock_test_client.py  mock_tests.py  tests.py
bot/src/request/: base.py  clients.py  exceptions.py  interfaces.py  services.py
bot/src/schemas/: requests.py  responses.py  users.py
bot/src/services/: questioning_service.py  schedule_service.py  user_service.py
bot/src/ui/: __init__.py  admin_menu.py  buttons.py  constants.py  core.py  main_menu.py
bot/tests/unit/: test_api_client.py  test_obj_api_client.py  test_test_api_client.py
docker/adminpanel/: Dockerfile
docker/adminpanel/scripts/: entrypoint.sh  entrypoint_adminpanel.sh  entrypoint_all_in_one.sh  entrypoint_celery.sh  entrypoint_celery_beat.sh  start.sh  start_adminpanel.sh  start_celery_beat.sh
docker/bot/: Dockerfile
docker/celery/: Dockerfile
docker/celery/scripts/: entrypoint.sh  start.sh
docker/celery_beat/: Dockerfile
docker/celery_beat/scripts/: start.sh
docker/nginx/: nginx.conf
docker/nginx/templates/: site.conf.template
docker/scripts/: wait-dependencies.sh
docker/webapi/: Dockerfile
docker/webapi/scripts/: start.sh
docs/: tests-architecture.drawio
docs/CalDAV_examples/: schelduer.py  ya_calendar_testing.py
webapi/scripts/: entrypoint.sh  start.sh
webapi/src/: manage.py
webapi/src/app/: __init__.py  utils.py
webapi/src/app/api/: __init__.py
webapi/src/tests/: conftest.py
(+115 files in other folders)
