[tool.poetry]
name = "bmc_companion_bot"
version = "0.1.0"
description = """ \
Telegram bot "Are you okey" \
for making an appointment with a psychologist \
"""
authors = [
    "Denis <xczdenis@gmail.com>",
    "Daniel <recloud13@yandex.ru>",
    "Alexander <drakon.a.v@yandex.ru>",
    "Alexander <alkh0304@yandex.ru>",
    "Alexey <learies@ya.ru>",
    "Alexander <precipitance@gmail.com>",
    "Tanya <tanya.halquist2013@yandex.ru>",
    "Sergey <ser5olovjew@yandex.ru>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
loguru = "^0.6.0"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
Flask-Migrate = "^3.1.0"
redis = "^4.3.4"
pydantic = "^1.10.2"
Flask-Limiter = {extras = ["redis"], version = "^2.7.0"}
psycopg2-binary = "2.9.3"
flask-admin = "^1.6.0"
flask-pydantic = "^0.11.0"
flask-restful = "^0.3.9"
spectree = "^1.0.3"
httpx = "^0.23.1"
flask-rest-paginate = "^1.1.3"
caldav = "^0.11.0"
python-telegram-bot = "^20.0"
requests = "^2.28.2"
django = "^4.1.5"
django-split-settings = "^1.2.0"
djangorestframework = "^3.14.0"
python-decouple = "^3.7"
django-filter = "^22.1"
django-celery-beat = "^2.4.0"
celery = "^5.2.7"
phonenumbers = "^8.13.6"
openpyxl = "^3.1.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.4"
flake8-quotes = "^3.3.1"
pep8-naming = "^0.13.2"
flake8-broken-line = "^0.6.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
django-debug-toolbar = "^3.8.1"


[tool.poetry.group.tests.dependencies]
pytest = "^7.2.0"
faker = "^15.3.4"


[tool.black]
line-length = 100
exclude = '''
/(
  | migrations
)/
'''


[tool.isort]
line_length = 88
multi_line_output = 3
default_section = "THIRDPARTY"
skip = "venv/"
skip_glob = "**/migrations/*.py"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true


[tool.pytest.ini_options]
pythonpath = ["webapi/src", "bot/src"]
addopts = "-v -p no:warnings"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"