[tool.poetry]
name = "bmc-companion-bot"
version = "0.1.0"
description = ""
authors = [
    "Denis <xczdenis@gmail.com>",
    "Daniel <recloud13@yandex.ru>",
    "Alexander <drakon.a.v@yandex.ru>",
    "Alexander <alkh0304@yandex.ru>",
    "Alexey <learies@ya.ru>",
    "Alexander <precipitance@gmail.com>",
    "Tanya <tanya.halquist2013@yandex.ru>",
    "Sergey <ser5olovjew@yandex.ru>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.adminpanel.dependencies]
django = "^4.1.7"
django-split-settings = "^1.2.0"
celery = "^5.2.7"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
django-celery-beat = "^2.5.0"
openpyxl = "^3.1.2"
requests = "^2.28.2"
drf-spectacular = "^0.26.0"
loguru = "^0.6.0"
pydantic = "^1.10.6"
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"

[tool.poetry.group.bot.dependencies]
python-telegram-bot = "^20.1"
phonenumbers = "^8.13.7"
pydantic = "^1.10.6"
loguru = "^0.6.0"

[tool.poetry.group.lint.dependencies]
flake8 = "5.0.4"
flake8-quotes = "^3.3.2"
pep8-naming = "^0.13.3"
flake8-broken-line = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
django-debug-toolbar = "^3.8.1"

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.2"
faker = "^17.6.0"

[tool.black]
line-length = 100
exclude = '''
/(
  | migrations
)/
'''



[tool.isort]
line_length = 88
multi_line_output = 3
default_section = "THIRDPARTY"
skip = "venv/"
skip_glob = "**/migrations/*.py"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
